Fix padding on mobile for privacy and cookies page

--- a/css/style.css
+++ b/css/style.css
@@ -1286,6 +1286,11 @@ footer .credits a {
   .back-to-top {
     bottom: 15px;
   }
+
+  .cookies-p, .privacy-p {
+    padding: 18px;
+  }
+  
 }
 
 .img-container {
